--- a/src/assets/styles/about.css
+++ b/src/assets/styles/about.css
@@ -1,3 +1,18 @@
-.container {
+/* .container {
   text-align: center;
+  border: 5px solid black;
+}
+
+.row {
+  border: 2px solid orange;
+}
+
+.col {
+  border: 2px solid blue;
+} */
+
+.icon {
+  font-size: 2rem;
+  margin-left: 1rem;
+  /* margin-top: 1rem; */
 }
